LM Studio Setup

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,8 @@ DEBUG=True
 API_HOST=0.0.0.0
 API_PORT=8000
 
+# LM Studio Configuration
+LM_STUDIO_BASE_URL=http://127.0.0.1:1234/v1
+LM_STUDIO_MODEL=local-model
+
 # Add your environment variables here
