Add security improvements and Google Custom Search API integration

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,10 @@ API_PORT=8000
 LM_STUDIO_BASE_URL=http://127.0.0.1:1234/v1
 LM_STUDIO_MODEL=local-model
 
+# Google Custom Search API Configuration
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# Create a Custom Search Engine at: https://programmablesearchengine.google.com/
+GOOGLE_API_KEY=YOUR_API_KEY_HERE
+GOOGLE_CX=YOUR_SEARCH_ENGINE_ID_HERE
+
 # Add your environment variables here
