--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ ENV/
 
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # IDE
 .vscode/
@@ -25,3 +27,26 @@ Thumbs.db
 
 # FastAPI
 *.log
+logs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Secrets and credentials (extra safety)
+*secret*
+*SECRET*
+*credentials*
+*.pem
+*.key
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+test_*.py
+temp/
+tmp/
