MCP + Dask + Crawl4AI

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,13 @@ LM_STUDIO_MODEL=local-model
 GOOGLE_API_KEY=YOUR_API_KEY_HERE
 GOOGLE_CX=YOUR_SEARCH_ENGINE_ID_HERE
 
+# Dask Distributed Scraping Configuration
+# Set to True to enable distributed scraping across multiple workers
+USE_DASK=False
+# Dask scheduler address (leave empty for local cluster)
+# Example: localhost:8786 or scheduler.example.com:8786
+DASK_SCHEDULER=
+# Number of workers for local Dask cluster (ignored if DASK_SCHEDULER is set)
+DASK_WORKERS=4
+
 # Add your environment variables here
