--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,12 @@ DASK_SCHEDULER=
 # Number of workers for local Dask cluster (ignored if DASK_SCHEDULER is set)
 DASK_WORKERS=4
 
+# Milvus Vector Database Configuration
+# Milvus server host (default: localhost)
+MILVUS_HOST=localhost
+# Milvus server port (default: 19530)
+MILVUS_PORT=19530
+# Milvus collection name
+MILVUS_COLLECTION=ai_firm_vectors
+
 # Add your environment variables here
