--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ requests==2.32.3
 mcp==1.1.2
 crawl4ai
 dask[distributed]
+# Embeddings and Vector Database
+torch>=2.0.0
+transformers>=4.30.0
+pymilvus>=2.3.0
