vLLM Update + Speculative Decoding

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,11 @@ requests==2.32.3
 mcp==1.1.2
 crawl4ai
 dask[distributed]
+
+# Production LLM Inference (vLLM - what real companies use)
+vllm>=0.6.0
+
 # Embeddings and Vector Database
 torch>=2.0.0
-transformers>=4.30.0
+transformers>=4.30.0  # Only for embeddings (BGE-M3), not for inference
 pymilvus>=2.3.0
